--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img7.jpeg" alt="">
                         <div class="text">
-                            <h1>Carefree Days</h1>
+                            <h1>Carefree</h1>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
