changed h1 to p with a class

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="image-container1 left-image1">
                         <img src="images/img8.jpeg" alt="">
                         <div class="text">
-                            <h1>Echoes of the Captive</h1>
+                            <p class="text-ttl">Echoes of the Captive</p>
                             <p>$ 356,799.99</p>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img4.jpeg" alt="">
                         <div class="text">
-                            <h1>Hope in Small Hands</h1>
+                            <p class="text-ttl">Hope in Small Hands</p>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img5.jpeg" alt="">
                         <div class="text">
-                            <h1>Heaven Heard Him</h1>
+                            <p class="text-ttl">Heaven Heard Him</p>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img6.jpeg" alt="">
                         <div class="text">
-                            <h1>Stories in His Wrinkles</h1>
+                            <p class="text-ttl">Stories in His Wrinkles</p>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img7.jpeg" alt="">
                         <div class="text">
-                            <h1>Carefree</h1>
+                            <p class="text-ttl">Carefree Life</p>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img11.jpeg" alt="">
                         <div class="text">
-                            <h1>Pawprints on My Heart</h1>
+                            <p class="text-ttl">Pawprints on My Heart</p>
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img10.jpeg" alt="">
                         <div class="text">
-                            <h1>The Mirror Knows</h1>
+                            <p class="text-ttl">The Mirror Knows</p class="text-ttl">
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                     <div class="image-container1 left-image">
                         <img src="images/img9.jpeg" alt="">
                         <div class="text">
-                            <h1>Voices of the Motherland</h1>
+                            <p class="text-ttl">Voices of the Motherland</p class="text-ttl">
                             <p>$ 456,799.99</p>
                         </div>
                     </div>
